bachelor final version

--- a/ImageSegmentation/ImageSegmentation.vcxproj.filters
+++ b/ImageSegmentation/ImageSegmentation.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImageSegmentationMath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ImageSegmentation.h">
