--- a/ImageSegmentation/ImageSegmentation.vcxproj
+++ b/ImageSegmentation/ImageSegmentation.vcxproj
@@ -105,6 +105,7 @@
     <QtUic Include="ImageSegmentation.ui" />
     <QtMoc Include="ImageSegmentation.h" />
     <ClCompile Include="ImageSegmentation.cpp" />
+    <ClCompile Include="ImageSegmentationMath.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
