Added Edmonds-Karp Algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ ImageSegmentation/ImageSegmentation.vcxproj
 ImageSegmentation/ImageSegmentation.vcxproj.filters
 ImageSegmentation/ImageSegmentation.vcxproj.user
 .vs
+ImageSegmentation.sln
