first bachelor's version of project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ImageSegmentation/ImageSegmentation.vcxproj.filters
 ImageSegmentation/ImageSegmentation.vcxproj.user
 .vs
 ImageSegmentation.sln
+/build
